# wasmtime-module-drop-test

./: Cargo.toml  rust_wasm_module.wasm
.github/workflows/: test.yaml
benches/: create_module.rs  with_criterion.rs  without_criterion.rs
rust_wasm_module/: Cargo.toml
src/: lib.rs
